# WhisprRT

./: .gitignore  README.md  pyproject.toml  transcript_output.txt
app/: __init__.py  config.py  main.py
app/api/: router.py
app/api/endpoints/: audio.py  transcription.py  websocket.py
app/core/: logging.py
app/models/: schemas.py
app/services/: audio.py  transcription.py  whisper.py
templates/: index.html
