[project]
name = "whisprrt"
version = "0.1.0"
description = "Real-time voice-to-text transcription"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "faster-whisper>=1.1.1",
    "jinja2>=3.1.6",
    "numpy>=2.2.5",
    "sounddevice>=0.5.1",
    "uvicorn[standard]>=0.34.2",
    "websockets>=15.0.1",
]
